# simple_error

./: CMakeLists.txt  LICENSE  README.md  error.ixx  simple_error.hpp  vcpkg.json
